--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
                     <li><a href="#">Поставщикам</a></li>
                     <li><a href="#">Контакты</a></li>
                     <li><a href="#">кабинет</a></li>
+                    <li><a href="#">Контакты</a></li>
+                    <li><a href="#">кабинет</a></li>
                   </ul>
                 </div>
               </div>
