mobile-menu, popup added, large catalog

--- a/index.html
+++ b/index.html
@@ -25,22 +25,41 @@
                 <div class="header-burger">
                   <div class="burger"><span></span></div>
                 </div>
-                <div class="header-catalog"><a id="full-catalog" href="#"><span>каталог</span><span class="full-catalog-arrow"></span></a></div>
+                <div class="header-catalog">
+                  <div class="full-catalog-link"><a class="full-catalog" id="full-catalog" href="#">
+                      <div class="full-catalog-btn"><span>каталог</span><span class="full-catalog-arrow"></span></div></a>
+                    <div class="large-catalog">
+                      <div class="container">
+                        <div class="large-catalog-grid">
+                          <div class="large-catalog-item"><a class="sale" href="#">Распродажа</a></div>
+                          <div class="large-catalog-item"><a href="#">Блузки</a></div>
+                          <div class="large-catalog-item"><a href="#">Рубашки</a></div>
+                          <div class="large-catalog-item"><a href="#">Футболки и топы</a></div>
+                          <div class="large-catalog-item"><a href="#">Платья</a></div>
+                          <div class="large-catalog-item"><a href="#">Пиджаки</a></div>
+                          <div class="large-catalog-item"><a href="#">Костюмы</a></div>
+                          <div class="large-catalog-item"><a href="#">Кардиганы</a></div>
+                          <div class="large-catalog-item"><a href="#">Джемперы</a></div>
+                          <div class="large-catalog-item"><a href="#">Джинсы</a></div>
+                          <div class="large-catalog-item"><a href="#">Брюки</a></div>
+                          <div class="large-catalog-item"><a href="#">Юбки</a></div>
+                          <div class="large-catalog-item"><a href="#">Шорты</a></div>
+                          <div class="large-catalog-item"><a href="#">Куртки</a></div>
+                          <div class="large-catalog-item"><a href="#">Пальто</a></div>
+                          <div class="large-catalog-item"><a href="#">Плащи</a></div>
+                          <div class="large-catalog-item"><a href="#">Шубы</a></div>
+                          <div class="large-catalog-item"><a href="#">Шарфы и палантины</a></div>
+                          <div class="large-catalog-item"><a href="#">Головные уборы</a></div>
+                          <div class="large-catalog-item"><a href="#">Аксессуары</a></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <div class="header-menu">
-                  <div class="close-mobile-menu cross-icon"></div>
-                  <ul class="mobile">
-                    <li><a href="#">каталог</a></li>
-                  </ul>
                   <ul>
                     <li><a href="#">компания</a></li>
                     <li><a href="#">новости</a></li>
-                  </ul>
-                  <ul class="mobile">
-                    <li><a href="#">Поставщикам</a></li>
-                    <li><a href="#">Контакты</a></li>
-                    <li><a href="#">кабинет</a></li>
-                    <li><a href="#">Контакты</a></li>
-                    <li><a href="#">кабинет</a></li>
                   </ul>
                 </div>
               </div>
@@ -63,6 +82,7 @@
             </div>
           </div>
         </div>
+        <div class="large-catalog-bg"></div>
       </header>
       <div class="all-content">
         <section>
@@ -1450,6 +1470,28 @@
               </ul>
             </div>
           </form>
+        </div>
+      </div>
+      <div class="header-menu mobile-menu">
+        <div class="close-mobile-menu cross-icon"></div>
+        <ul>
+          <li><a href="#">каталог</a></li>
+          <li><a href="#">компания</a></li>
+          <li><a href="#">новости</a></li>
+          <li><a href="#">Поставщикам</a></li>
+          <li><a href="#">Контакты</a></li>
+          <li><a href="#">кабинет</a></li>
+        </ul>
+      </div>
+      <div class="popup popup-added">
+        <div class="close-popup"></div>
+        <div class="popup-content">
+          <div class="popup-added-title">
+            <p>Товар добавлен в корзину</p>
+          </div>
+          <div class="actions-added-cart"><a class="actions-added-btn actions-order" href="#">Оформить заказ</a>
+            <button class="actions-added-btn actions-continue" type="button">Продолжить покупки</button>
+          </div>
         </div>
       </div>
     </div>
